# plan_to_podcast

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .justfile  Containerfile  README.md  pyproject.toml
oc-templates/: README.md
oc-templates/base/: configmap.yml  kustomization.yml
oc-templates/preprod/: buildconfig.yml  imagestream.yml  kustomization.yml
oc-templates/prod/: kustomization.yml
plan_to_podcast/: __init__.py  app.py  constants.py  generate_podcast.py  main.py  tts.py  utils.py
